--- a/static/stylesheets/custom.css
+++ b/static/stylesheets/custom.css
@@ -132,7 +132,31 @@ h1, h2, h3, h4, h5, h6 {
    font-weight: normal;
    color: black;
    text-align: center;
+   page-break-after: avoid;
   }
+
+footnote {
+  page-break-inside: avoid;
+}
+
+@page:right{
+  @bottom-right {
+    content: counter(page);
+  }
+}
+
+h1 { 
+  string-set: doctitle content(); 
+}
+
+@page :right {
+  @top-right {
+    content: string(doctitle);
+    margin: 30pt 0 10pt 0;
+    font-size: 8pt;
+  }
+}
+
 /* titling level 1: document title */
 .document-title {
    text-align: center;
