--- a/static/stylesheets/custom.css
+++ b/static/stylesheets/custom.css
@@ -25,23 +25,36 @@ merchantability or fitness for any particular purpose.
 
 /* page and text defaults */
 
-body { margin-left: 8%;
-     margin-right: 8%;
+body { margin-left: 5%;
+     margin-right: 5%;
      background-color: #ffffff }
 
 
 div > *:first-child { margin-top:0em }
 
-div { margin-top: 0.5em }
+div { 
+    margin-top: 0.5em;
+}
+
+p.abstract {
+    font-size: 60%;
+}
+
+div.double { 
+    margin-top: 0.5em;
+    column-count: 2; 
+    page-break-inside: auto;
+    column-fill: auto;
+}
 
 div.front, div.footer { }
 
 .back, .body { 
-	margin-left: 5em;
-	margin-right: 5em;
-	margin-top: 5em;
-	margin-bottom: 5em;
-	line-height: 1.5;
+	margin-left: 2em;
+	margin-right: 2em;
+	margin-top: 2em;
+	margin-bottom: 2em;
+	line-height: 1.3;
 	text-align:justify;
 	font-family: "DejaVu Sans Condensed", sans 
 }
