--- a/static/stylesheets/habenstein.css
+++ b/static/stylesheets/habenstein.css
@@ -47,6 +47,7 @@ article-meta {
 body {
   font-family: "Amiri", serif;
   font-size: 12pt;
+  counter-reset: chapter;
 }
 
 sec sec { 
@@ -72,6 +73,14 @@ footnote {
   margin-bottom: 5pt;
 }
 
+footnote::footnote-call {
+    content: counter(footnote);
+    font-size: 83%;
+    vertical-align: super;
+    line-height: none;
+    margin-right: 2pt;
+}
+
 body > sec > title {
   display: block;
   font-family: "Liberation Sans", sans-serif;
@@ -80,6 +89,16 @@ body > sec > title {
   padding: 0;
   text-align: center;
   string-set: chaptitle content();
+  counter-reset: section;
+}
+
+body > sec > title.numbered::before {
+  counter-increment: chapter;
+  content: counter(chapter) " ";
+}
+
+body > sec {
+  page-break-after: always;
 }
 
 body > sec > sec > title {
@@ -88,6 +107,12 @@ body > sec > sec > title {
   text-align: left;
   margin: 10pt 0 14pt;
   string-set: sectitle content();
+  counter-increment: section;
+}
+
+body > sec > sec > title.numbered::before {
+  counter-increment: section;
+  content: counter(chapter) "." counter(section) " ";
 }
 
 italic {
