WEb2y application layout

--- a/views/layout.html
+++ b/views/layout.html
@@ -126,6 +126,6 @@
     </script>
     {{pass}}
     <!-- Share ============================y============ -->
-    <script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script>
+    <!--script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script-->
   </body>
 </html>
