Added collection-meta with title and subtitle

--- a/static/tools/plugins/import/omp/templates/sample-monograph.bits.xml
+++ b/static/tools/plugins/import/omp/templates/sample-monograph.bits.xml
@@ -6,6 +6,7 @@
     <collection-meta>
         <title-group>
             <title>Heidelberg Studies of Transculturality</title>
+            <subtitle>Sub</subtitle>
             <!-- subtitle -->
         </title-group>
         <contrib-group>
