--- a/views/default/index.html
+++ b/views/default/index.html
@@ -4,8 +4,8 @@
 <div class="panel panel-info">
   <div class="panel-heading"><h3 class="panel-title"><a class="btn-block"
       href="">
-      <i class="glyphicon glyphicon-cog"></i>
-      {{=T("my projects")}}
+      <i class="glyphicon glyphicon-user"></i>
+      {{=T("Workbench")}}
     </a></h3></div>
   <!--div class="panel-body">
     {{=T("Lists all my projects")}}
@@ -47,3 +47,4 @@
   </ul>
 </div>
 {{end}}
+{{=grid}}
