--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -7,13 +7,13 @@
 function run_heimpt() {
 $( "#runHeimpt" ).on('shown', function(){
    $("#runHeimptBody").html("running");
-   $.get( "https://localhost:8000/heimpt/run/project/"+, function( data ) {
+   $.get( "https://localhost:8000/heimpt/run/project/"+"1", function( data ) {
    var dta = document.createElement("div");
    var p;
    d = data.split("\n")
    for (key in d) {
-   p = document.createElement("p");
-   p.appendChild(document.createTextNode(key+" : "+d[key]));
+    p = document.createElement("p");
+    p.appendChild(document.createTextNode(key+" : "+d[key]));
     dta.appendChild(p);
    }
    $("#runHeimptBody").html(dta);
