--- a/views/configure/edit_typesetter.html
+++ b/views/configure/edit_typesetter.html
@@ -1,3 +1,6 @@
 {{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
+ <div class="jumbotron">
 {{=form}}
+ </div>
+
