--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,12 +1,30 @@
 {{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 
-<div class="container dynamicTile">
-<div class="row ">
+<div class="container ">
 
-    {{for m in ms:
-    =m
-    pass
-    }}
+
+    <div class="jumbotron">
+        <h1></h1>
+        <div class="row">
+            <div class="col-xs-6 col-md-6">
+            {{for m in tools:
+                =m
+                pass
+                }}
+
+            </div>
+            <div class="col-xs-6 col-md-6">
+            {{for m in conf_add:
+                =m
+                pass
+                }}
+
+            </div>
+
+
+
+        </div>
+
+    </div>
 </div>
-
