--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -30,3 +30,43 @@ $( "#runHeimpt"+id ).on('shown', function(){
 run_heimpt({{=i}});
 {{pass}}
 </script>
+<div id="tree"></div>
+<script>
+var tree = [
+  {
+    text: "Parent 1",
+    nodes: [
+      {
+        text: "Child 1",
+        nodes: [
+          {
+            text: "Grandchild 1"
+          },
+          {
+            text: "Grandchild 2"
+          }
+        ]
+      },
+      {
+        text: "Child 2"
+      }
+    ]
+  },
+  {
+    text: "Parent 2"
+  },
+  {
+    text: "Parent 3"
+  },
+  {
+    text: "Parent 4"
+  },
+  {
+    text: "Parent 5"
+  }
+];
+
+$('#tree').treeview({data: tree});
+</script>
+
+
