--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -8,9 +8,33 @@ pass
 }}
 
 <script>
+
+
+
+function sleep(delay) {
+        var start = new Date().getTime();
+        while (new Date().getTime() < start + delay);
+      }
 function run_heimpt(id) {
 $( "#runHeimpt"+id ).on('shown', function(){
-   $("#runHeimptBody"+id).html("running");
+
+  var percent = 0;
+  var   m_id = "#runHeimptBody"+id;
+  $(m_id).css('width', '0px');
+  $(m_id).addClass('progress-bar progress-bar-success');
+  timerId = setInterval(function() {
+    percent += 2;
+    $(m_id).css('width', percent + '%');
+    $(m_id).html(percent + '%');
+    if (percent >= 100) {
+      clearInterval(timerId);
+      $(m_id).removeClass('progress-bar-striped active');
+      $(m_id).html('processing complete');
+      $("#runHeimpt"+id ).modal('hide');
+    }
+  }, 300);
+
+   $("#runHeimptBody"+id).html('<div class="progress" id="submit_progress" style="width:100%"> <div class="" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="'+'#runHeimpt'+id +'" style="width:0%">    0%</div></div>');
    var url= "{{=myconf.take("heimpt.url")}}";
    $.get( url+"/run/project/"+id, function( data ) {
    var dta = document.createElement("div");
@@ -18,10 +42,11 @@ $( "#runHeimpt"+id ).on('shown', function(){
    d = data.split("\n")
    for (key in d) {
     p = document.createElement("p");
-    p.appendChild(document.createTextNode(key+" : "+d[key]));
+    p.appendChild(document.createTextNode(d[key]));
     dta.appendChild(p);
    }
-   $("#runHeimptBody"+id).html(dta);
+   $("#runHeimpt"+id ).modal('hide');
+   window.location.reload(true);
 
     });
 });
@@ -30,60 +55,15 @@ $( "#runHeimpt"+id ).on('shown', function(){
 run_heimpt({{=i}});
 {{pass}}
 </script>
-<div id="tree"></div>
+
+{{
+for m in modals:
+}}
 <script>
-var tree = [
-  {
-    text: "Parent 1",
-    nodes: [
-      {
-        text: "Child 1",
-        nodes: [
-          {
-            text: "Grandchild 1"
-          },
-          {
-            text: "Grandchild 2"
-          }
-        ]
-      },
-      {
-        text: "Child 2"
-      }
-    ]
-  },
-  {
-    text: "Parent 2"
-  },
-  {
-    text: "Parent 3"
-  },
-  {
-    text: "Parent 4"
-  },
-  {
-    text: " Node 1",
-  icon: "glyphicon glyphicon-folder-close",
-  selectedIcon: "glyphicon glyphicon-folder-open",
-  color: "#000000",
-  backColor: "#FFFFFF",
-  href: "#node-1",
-  selectable: true,
-  state: {
-    checked: true,
-    disabled: false,
-    expanded: true,
-    selected: false
-  },
-  tags: ['available'],
-  nodes: [
-    {},
-
-  ]
-  }
-];
-
-$('#tree').treeview({data: tree, silent: true });
+var tree= [{{=XML(result_dir[m])}}];
+$('#result_directory_{{=m}}').treeview({data: tree, silent: true ,enableLinks: false});
+$('#result_directory_{{=m}}').treeview('collapseAll');
 </script>
 
+{{pass}}
 
