--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -49,7 +49,7 @@ $( "#runHeimpt"+id ).on('shown', function(){
 
    $("#runHeimpt"+id ).modal('hide');
    $("#download_zip_"+id ).addClass('danger');
-   window.location.reload(true);
+   //window.location.reload(true);
 
 
     });
