--- a/views/layout.html
+++ b/views/layout.html
@@ -108,14 +108,10 @@
     <footer class="footer">
       <div class="container-fluid">
 
-
-
-
-
         <div class="copyright pull-left">
-          <a href="https://www.github.com/withanage/heimpt"><img src="https://raw.githubusercontent.com/withanage/heimpt/master/static/images/heiMPT.jpg" height="40px;" /></div></a>&nbsp;
-          <a href="http://www.ub.uni-heidelberg.de/"><img src="http://www.ub.uni-heidelberg.de/nav4/grafik/layout/ub_logo2.gif" height="40px;" /></div></a>
-          <a href="https://pkp.sfu.ca/"><img src="http://books.ub.uni-heidelberg.de/lib/pkp/templates/images/pkp_brand.png" height="40px;" /></div></a>
+          <a href="https://www.github.com/withanage/heimpt"><img src="https://raw.githubusercontent.com/withanage/heimpt/master/static/images/heiMPT.jpg" height="40px;" /></a>&nbsp;
+          <a href="http://www.ub.uni-heidelberg.de/"><img src="http://www.ub.uni-heidelberg.de/nav4/grafik/layout/ub_logo2.gif" height="40px;" /></a>&nbsp;
+          <a href="https://pkp.sfu.ca/"><img src="http://books.ub.uni-heidelberg.de/lib/pkp/templates/images/pkp_brand.png" height="20px;" /></a>
 
       </div>
     </footer>
