Progress for #62. omp.py: Updated chapter and monograph metadata templates. Syntax and naming changes. Added chapter authors to chapter metadata. Removed unused property from settings.example.json

--- a/static/tools/plugins/import/omp/templates/sample-chapter.bits2.xml
+++ b/static/tools/plugins/import/omp/templates/sample-chapter.bits2.xml
@@ -4,6 +4,8 @@
         <title-group>
             <title>Remerciments</title>
         </title-group>
+        <contrib-group>
+        </contrib-group>
         <custom-meta-group>
             <custom-meta specific-use="urn">
                 <meta-name>urn</meta-name>
